--- a/less/style.less
+++ b/less/style.less
@@ -11,6 +11,7 @@
 @import "blocks/certificate-of-quality.less";
 @import "blocks/container.less";
 @import "blocks/content-navigation.less";
+@import "blocks/contract-offer.less";
 @import "blocks/dividers.less";
 @import "blocks/feature.less";
 @import "blocks/footer.less";
