--- a/less/blocks/advice.less
+++ b/less/blocks/advice.less
@@ -68,12 +68,12 @@
     font-size: 24px;
   }
 
-  .container-article.container-article--form {
-    width: 40%;
+  .advice .container-article--form {
+    width: 50%;
 
     padding-bottom: 35px;
 
-    background-color: #fff;
+    background-color: transparent;
     border: 1px solid @style-color;
     border-radius: 15px;
   }
