--- a/less/blocks/infographics.less
+++ b/less/blocks/infographics.less
@@ -9,14 +9,15 @@
 }
 
 .infographics-wrapper {
-  display: flex;
-  justify-content: center;
+  width: 90%;
   margin: 0 auto;
 
   padding-top: 20px;
-  padding-right: 20px;
   padding-bottom: 20px;
-  padding-left: 20px;
+}
+
+.infographics-wrapper img {
+  margin: 0 auto;
 }
 
 .infographics-item {
@@ -65,7 +66,7 @@
 @media (min-width: 768px) {
 
   .infographics-wrapper {
-    width: 90%;
+    width: 70%;
   }
 
   .infographics-item {
