--- a/less/blocks/dividers.less
+++ b/less/blocks/dividers.less
@@ -8,6 +8,11 @@
   margin-bottom: 20px;
 }
 
+.divider-main--info {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
 .divider-main--about {
   margin-top: 20px;
 }
