--- a/less/blocks/infographics.less
+++ b/less/blocks/infographics.less
@@ -57,7 +57,7 @@
 }
 
 .infographics-first-block__question-list-one {
-
+  font-size: 18px;
 }
 
 .infographics-first-block__question-list-one li {
@@ -88,7 +88,7 @@
 }
 
 .infographics-first-block__question-list-two {
-
+  font-size: 18px;
 }
 
 .infographics-first-block__question-list-two li {
@@ -118,7 +118,7 @@
 }
 
 .infographics-first-block__question-list-three {
-
+  font-size: 18px;
 }
 
 .infographics-first-block__question-list-three li {
@@ -173,6 +173,8 @@
   border-right: 3px solid @style-color;
   border-left: 3px solid @style-color;
   border-radius: 15px;
+
+  font-size: 18px;
 }
 
 
@@ -231,6 +233,8 @@
   border-top: 2px solid @style-color;
   border-bottom: 2px solid @style-color;
   border-radius: 15px;
+
+  font-size: 18px;
 }
 
 .infographics-third-block__feature-item-one {
@@ -253,6 +257,7 @@
 
 .infographics-third-block__content {
   text-align: center;
+  font-size: 20px;
 }
 
 
