infographics pink color

--- a/less/blocks/infographics.less
+++ b/less/blocks/infographics.less
@@ -134,7 +134,7 @@
   padding-bottom: 20px;
   padding-left: 20px;
 
-  background-color: @bg-color-cyan-light;
+  background-color: @bg-color-pink;
 }
 
 .infographics-second-block__title {
