--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1021,7 +1021,7 @@ a:active {
   padding-right: 20px;
   padding-bottom: 20px;
   padding-left: 20px;
-  background-color: #e9f7f8;
+  background-color: #fce7e3;
 }
 .infographics-second-block__title {
   max-width: 580px;
