--- a/css/style.css
+++ b/css/style.css
@@ -115,12 +115,44 @@
   color: #999;
   text-align: center;
 }
+.label-first,
+.label-two {
+  display: none;
+}
+.form-control {
+  display: block;
+  height: 45px;
+  width: 80%;
+  margin: 0 auto;
+  padding: 0;
+  padding-left: 10px;
+  border: none;
+  border-radius: 0;
+  border-bottom: 3px solid #77cde3;
+  background-color: transparent;
+  box-shadow: none;
+}
+.form-control:focus {
+  outline: none;
+  box-shadow: none;
+}
 @media (min-width: 768px) {
   .advice__title {
     font-size: 30px;
   }
   .advice__content {
     font-size: 24px;
+  }
+  .advice .container-article--form {
+    width: 50%;
+    padding-bottom: 35px;
+    background-color: transparent;
+    border: 1px solid #1eb1fc;
+    border-radius: 15px;
+  }
+  .advice .button-wrapper {
+    margin-top: 20px;
+    margin-bottom: 20px;
   }
 }
 .animation-fadeIn {
@@ -834,9 +866,6 @@ a:active {
 .footer__payment-icon {
   fill: #2071e6;
 }
-.footer__payment-icon span:first-child {
-  margin-right: 20px;
-}
 .footer__payment-partner img {
   width: 200px;
   height: auto;
@@ -914,7 +943,7 @@ a:active {
   }
 }
 .infographics__title {
-  max-width: 360px;
+  max-width: 450px;
   margin: 0 auto;
   margin-top: 50px;
   margin-bottom: 50px;
@@ -939,14 +968,11 @@ a:active {
 .infographics-first-block__slider {
   width: 100%;
 }
-.carousel-indicators {
-  bottom: 0;
-}
 .carousel-indicators li {
-  background-color: #50c2fd;
+  background-color: #1eb1fc;
 }
 .carousel-indicators .active {
-  background-color: #1eb1fc;
+  background-color: #0398e4;
 }
 .infographics-first-block__content {
   width: 100%;
@@ -998,120 +1024,6 @@ a:active {
 }
 .infographics-first-block__question-list-three li {
   margin-bottom: 10px;
-}
-.infographics-wrapper-second-block {
-  padding-top: 20px;
-  padding-right: 20px;
-  padding-bottom: 20px;
-  padding-left: 20px;
-  background-color: #fff;
-}
-.infographics-second-block__title {
-  max-width: 580px;
-  margin: 0 auto;
-  margin-top: 20px;
-  margin-bottom: 20px;
-  font-size: 26px;
-  line-height: 30px;
-  text-align: center;
-}
-.infographics-second-block__sub-title {
-  margin-bottom: 30px;
-  font-size: 18px;
-  font-weight: 600;
-  text-align: center;
-}
-.infographics-second-block__list-wrapper {
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -ms-flex-align: center;
-      align-items: center;
-}
-.infographics-second-block__list {
-  margin-bottom: 25px;
-  padding-top: 30px;
-  padding-right: 30px;
-  padding-bottom: 30px;
-  padding-left: 40px;
-  list-style: none;
-  border-radius: 15px;
-  font-size: 18px;
-}
-.infographics-second-block__list li {
-  margin-bottom: 10px;
-}
-.infographics-wrapper-third-block {
-  padding-top: 20px;
-  padding-right: 20px;
-  padding-bottom: 20px;
-  padding-left: 20px;
-  background-color: #f5fdf1;
-}
-.infographics-third-block__title {
-  margin: 0 auto;
-  margin-top: 20px;
-  margin-bottom: 20px;
-  font-size: 26px;
-  text-align: center;
-}
-.infographics-third-block__sub-title {
-  margin-bottom: 30px;
-  font-size: 18px;
-  text-align: center;
-  font-weight: 600;
-  color: red;
-}
-.infographics-third-block__list-wrapper {
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -ms-flex-align: center;
-      align-items: center;
-}
-.infographics-third-block__list {
-  min-width: 300px;
-  margin-bottom: 30px;
-  padding-left: 0;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  list-style: none;
-  text-align: center;
-  border-top: 2px solid #1eb1fc;
-  border-bottom: 2px solid #1eb1fc;
-  border-radius: 15px;
-  font-size: 20px;
-}
-.infographics-third-block__feature-item-one {
-  font-size: 26px;
-  font-weight: 600;
-  color: red;
-}
-.infographics-third-block__feature-item-two {
-  font-size: 26px;
-  font-weight: 600;
-  color: #1eb1fc;
-}
-.infographics-third-block__feature-item-three {
-  font-size: 26px;
-  font-weight: 600;
-  color: #0398e4;
-}
-.infographics-third-block__divider {
-  margin-bottom: 20px;
-}
-.infographics-third-block__divider img {
-  margin: 0 auto;
-}
-.infographics-third-block__content {
-  text-align: center;
-  font-size: 20px;
 }
 @media (min-width: 850px) {
   .question-content-one__title {
