--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,7 @@
 .advice {
   padding-top: 20px;
   padding-right: 20px;
-  padding-bottom: 20px;
+  padding-bottom: 30px;
   padding-left: 20px;
   background-color: #fceffc;
 }
@@ -113,35 +113,15 @@
 }
 .advice__content {
   color: #999;
+  font-size: 18px;
   text-align: center;
-}
-.label-first,
-.label-two {
-  display: none;
-}
-.form-control {
-  display: block;
-  height: 45px;
-  width: 80%;
-  margin: 0 auto;
-  padding: 0;
-  padding-left: 10px;
-  border: none;
-  border-radius: 0;
-  border-bottom: 3px solid #77cde3;
-  background-color: transparent;
-  box-shadow: none;
-}
-.form-control:focus {
-  outline: none;
-  box-shadow: none;
 }
 @media (min-width: 768px) {
   .advice__title {
-    font-size: 30px;
+    font-size: 28px;
   }
   .advice__content {
-    font-size: 24px;
+    font-size: 20px;
   }
   .advice .container-article--form {
     width: 50%;
@@ -156,7 +136,7 @@
   }
 }
 .animation-fadeIn {
-  animation: fadeIn 6s;
+  animation: fadeIn 3s;
 }
 @keyframes fadeIn {
   from {
@@ -172,16 +152,16 @@
 }
 @keyframes pulse {
   0% {
-    transform: scale(1.1);
+    transform: scale(1);
   }
   25% {
     transform: scale(0.8);
   }
   50% {
-    transform: scale(1.1);
+    transform: scale(1.2);
   }
   100% {
-    transform: scale(1.1);
+    transform: scale(1);
   }
 }
 .animation-rotation {
@@ -864,7 +844,8 @@ a:active {
   margin-bottom: 20px;
 }
 .footer__payment-icon {
-  fill: #2071e6;
+  display: inline-block;
+  width: 130px;
 }
 .footer__payment-partner img {
   width: 200px;
@@ -910,10 +891,11 @@ a:active {
 .infobar__list-item {
   margin-bottom: 20px;
   padding: 20px;
-  font-size: 16px;
+  font-size: 18px;
   background-color: #e9f7f8;
   transition: all 0.5s;
   overflow: hidden;
+  border-radius: 15px;
 }
 .infobar__list-item:hover {
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
@@ -922,8 +904,7 @@ a:active {
 .infobar__list-item:last-child {
   margin-bottom: 0;
 }
-.infobar__list-item:hover {
-  font-size: 18px;
+.infobar__list-item a {
   transition: all 0.5s;
 }
 .infobar__list-item a {
@@ -942,10 +923,12 @@ a:active {
     width: 32%;
   }
 }
+.infographics {
+  padding-top: 50px;
+}
 .infographics__title {
   max-width: 450px;
   margin: 0 auto;
-  margin-top: 50px;
   margin-bottom: 50px;
   font-size: 35px;
   text-align: center;
@@ -1025,6 +1008,15 @@ a:active {
 .infographics-first-block__question-list-three li {
   margin-bottom: 10px;
 }
+.infographics-wrapper-second-block {
+  padding-top: 40px;
+  padding-right: 20px;
+  padding-bottom: 20px;
+  padding-left: 20px;
+}
+.infographics-second-block__title {
+  text-align: center;
+}
 @media (min-width: 850px) {
   .question-content-one__title {
     text-align: left;
@@ -1057,10 +1049,12 @@ a:active {
 }
 .introduction__title {
   max-width: 415px;
-  margin-bottom: 8%;
+  margin-bottom: 60px;
+  font-size: 40px;
   text-align: center;
 }
 .introduction__aquel-title {
+  margin-bottom: 70px;
   font-size: 80px;
   color: #1eb1fc;
 }
@@ -1321,6 +1315,9 @@ a:active {
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
   transition: all 0.5s;
 }
+.shop-showcase .container-article:hover .shop-showcase__price {
+  color: #1eb1fc;
+}
 .shop-showcase__desc {
   padding-left: 10px;
   padding-right: 10px;
@@ -1475,6 +1472,12 @@ a:active {
 .single-product__sub-title {
   margin-bottom: 20px;
   font-size: 50px;
+  text-align: center;
+}
+.single-product__price {
+  color: #1eb1fc;
+  font-size: 20px;
+  font-weight: 600;
   text-align: center;
 }
 .single-product__content {
@@ -1648,15 +1651,13 @@ a:active {
   height: 90vh;
   max-height: 1000px;
   margin: 0 auto;
-  margin-top: 20px;
-  margin-bottom: 20px;
   background-color: #f5fdf1;
 }
 .welcome-to-shop__title {
-  font-size: 40px;
+  font-size: 45px;
   text-align: center;
 }
 .welcome-to-shop__subtitle {
   font-size: 20px;
-  margin-bottom: 7%;
+  margin-bottom: 50px;
 }
